--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=.;Database=IdentityServerDB;Trusted_Connection=True"
+    "Default": "Server=.;Database=IdentityServer;Trusted_Connection=True"
   },
   "IdentityServer": {
     "Issuer": "http://localhost:17321",
