--- a/IdentityServer/Properties/launchSettings.json
+++ b/IdentityServer/Properties/launchSettings.json
@@ -16,6 +16,21 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
+    "IISX-Production": {
+      "commandName": "IISExpress",
+      "launchBrowser": false,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      }
+    },
+    "IISX-Staging": {
+      "commandName": "IISExpress",
+      "launchBrowser": false,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Testing",
+        "ASPNETCORE_DETAILEDERRORS": "1"
+      }
+    },
     "IdentityServer": {
       "commandName": "Project",
       "launchBrowser": false,
