Create Actitvity Controller with all apis Create Entity Controller  with all apis Create Regions Controller with all apis *Note: Please Don't forget Update Database for any Changes in Entities

--- a/IdentityServer.Data/IdentityServer.Data.csproj
+++ b/IdentityServer.Data/IdentityServer.Data.csproj
@@ -7,6 +7,16 @@
   <ItemGroup>
     <Compile Remove="Migrations\20210810120718_RemoveSeededMigration.cs" />
     <Compile Remove="Migrations\20210810120718_RemoveSeededMigration.Designer.cs" />
+    <Compile Remove="Migrations\20210817161352_CreateAccountRelationMapping.cs" />
+    <Compile Remove="Migrations\20210817161352_CreateAccountRelationMapping.Designer.cs" />
+    <Compile Remove="Migrations\20210817161756_CreateAccountRelationMapping.cs" />
+    <Compile Remove="Migrations\20210817161756_CreateAccountRelationMapping.Designer.cs" />
+    <Compile Remove="Migrations\20210817162250_CreateAccountRelationMapping.cs" />
+    <Compile Remove="Migrations\20210817162250_CreateAccountRelationMapping.Designer.cs" />
+    <Compile Remove="Migrations\20210817162959_CreateAccountRelationMapping.cs" />
+    <Compile Remove="Migrations\20210817162959_CreateAccountRelationMapping.Designer.cs" />
+    <Compile Remove="Migrations\20210817163114_CreateAccountRelationMapping.cs" />
+    <Compile Remove="Migrations\20210817163114_CreateAccountRelationMapping.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
