fix connection string to release

--- a/IdentityServer/appsettings.Release.json
+++ b/IdentityServer/appsettings.Release.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=.;Database=IdentityServer;Trusted_Connection=True"
+    //"DefaultConnection": "Server=.;Database=IdentityServer;Trusted_Connection=True",
+    "DefaultConnection": "Server=.;Database=IdentityServer;User Id=ebram; Password=P@$$w0rd123;"
   },
   "IdentityServer": {
     "Issuer": "http://localhost:17321",
