--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -8,13 +8,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=.;Database=IdentityServer;Trusted_Connection=True",
-    "DefaultConnection": "Server=.;Database=IdentityServer;User Id=ebram; Password=P@$$w0rd123;"
+    "DefaultConnection": "Server=.;Database=IdentityServer;Trusted_Connection=True;"
   },
   "IdentityServer": {
     "Issuer": "http://localhost:17321",
     "Audience": "api",
-    "Secret": "d5a9b78e-a694-4026-af7f-6d559d8a3949"
+    "Secret": "d5a9b78e-a694-4026-af7f-6d559d8a3949",
+    "RedirectApi": "http://localhost:19302"
   },
   "Serilog": {
     "MinimumLevel": {
