--- a/IdentityServer/appsettings.Release.json
+++ b/IdentityServer/appsettings.Release.json
@@ -7,12 +7,12 @@
     }
   },
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=.;Database=IdentityServer;Trusted_Connection=True",
     "DefaultConnection": "Server=.;Database=IdentityServer;User Id=ebram; Password=P@$$w0rd123;"
   },
   "IdentityServer": {
-    "Issuer": "http://localhost:17321",
+    "Issuer": "http://localhost:8060",
     "Audience": "api",
-    "Secret": "d5a9b78e-a694-4026-af7f-6d559d8a3949"
+    "Secret": "d5a9b78e-a694-4026-af7f-6d559d8a3949",
+    "RedirectApi": "http://localhost:8010"
   }
 }
