--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -14,7 +14,7 @@
     "Issuer": "http://localhost:17321",
     "Audience": "api",
     "Secret": "d5a9b78e-a694-4026-af7f-6d559d8a3949",
-    "RedirectApi": "http://localhost:19302"
+    "RedirectApi": "https://localhost:44328"
   },
   "Serilog": {
     "MinimumLevel": {
