--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -11,10 +11,10 @@
     "DefaultConnection": "Server=.;Database=IdentityServer;Trusted_Connection=True;"
   },
   "IdentityServer": {
-    "Issuer": "http://localhost:17321",
+    "Issuer": "https://localhost:44303",
     "Audience": "api",
     "Secret": "d5a9b78e-a694-4026-af7f-6d559d8a3949",
-    "RedirectApi": "http://localhost:19302"
+    "RedirectApi": "https://localhost:44328"
   },
   "Serilog": {
     "MinimumLevel": {
