--- a/IdentityServer.Infrastructure/IdentityServer.Infrastructure.csproj
+++ b/IdentityServer.Infrastructure/IdentityServer.Infrastructure.csproj
@@ -5,4 +5,8 @@
     <Configurations>Debug;Release;Production</Configurations>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
