--- a/IdentityServer/appsettings.Release.json
+++ b/IdentityServer/appsettings.Release.json
@@ -10,9 +10,9 @@
     "DefaultConnection": "Server=.;Database=IdentityServer;User Id=ebram; Password=P@$$w0rd123;"
   },
   "IdentityServer": {
-    "Issuer": "http://localhost:8060",
+    "Issuer": "http://www.momkn.org/test/authentication",
     "Audience": "api",
     "Secret": "d5a9b78e-a694-4026-af7f-6d559d8a3949",
-    "RedirectApi": "http://localhost:8010"
+    "RedirectApi": "http://www.momkn.org/test/admin"
   }
 }
