--- a/IdentityServer/IdentityServer.csproj
+++ b/IdentityServer/IdentityServer.csproj
@@ -15,8 +15,8 @@
     <EnvironmentName>Development</EnvironmentName>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)' == 'Production'">
-    <EnvironmentName>Production</EnvironmentName>
+  <PropertyGroup Condition="'$(Configuration)' == 'Testing'">
+    <EnvironmentName>Testing</EnvironmentName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
