configure identity for testing envirnoment

--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -14,7 +14,8 @@
     "Issuer": "https://localhost:44303",
     "Audience": "api",
     "Secret": "d5a9b78e-a694-4026-af7f-6d559d8a3949",
-    "RedirectApi": "https://localhost:44328"
+    "RedirectApi": "https://localhost:44328",
+    "TMS": "https://localhost:44321"
   },
   "Serilog": {
     "MinimumLevel": {
