--- a/IdentityServer/IdentityServer.csproj
+++ b/IdentityServer/IdentityServer.csproj
@@ -2,11 +2,11 @@
 
 	<PropertyGroup>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
-		<Configurations>Debug;Release;Testing;Production</Configurations>
+		<Configurations>Debug;Release;Testing</Configurations>
 		<Deterministic>false</Deterministic>
 		<AssemblyVersion>1.1.1</AssemblyVersion>
 	</PropertyGroup>
-
+	
 	<PropertyGroup Condition=" '$(Configuration)' == '' Or '$(Configuration)' == 'Debug'">
 		<EnvironmentName>Development</EnvironmentName>
 	</PropertyGroup>
