[#NT-32] Return added new Model in accountType and AccountType profile

--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=IdentityServer;Trusted_Connection=True;"
+    //"DefaultConnection": "Server=.;Database=IdentityServer;Trusted_Connection=True;",
+    "DefaultConnection": "Data Source=10.90.3.158;User ID=Ebram;Password =P@$$w0rd123;Initial Catalog=IdentityServer;Integrated Security=false;Min Pool Size=5;Max Pool Size=30000;Connect Timeout=10000;"
   },
   "IdentityServer": {
     "Issuer": "https://localhost:44303",
